# pdfscale

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/pdfscale/: __init__.py  paper_size.py
src/pdfscale/static/: style.css
src/pdfscale/templates/: index.html
