[project]
name = "pdfscale"
version = "0.1.0"
dependencies = [
    "Flask>=3.0.3",
    "gunicorn>=22.0.0",
    "pypdf>=4.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
